# moodlist

./: .gitignore  Makefile  README.md  config.example.toml  install.sh  pyproject.toml
.claude/: settings.json
alfred/: moodlist.alfredworkflow  script-filter.sh
docs/superpowers/plans/: 2026-05-14-moodlist-v1.1.md  2026-05-14-moodlist.md  2026-05-15-moodlist-v1.2.md  2026-05-15-moodlist-v1.3.md
docs/superpowers/specs/: 2026-05-14-moodlist-design.md  2026-05-14-moodlist-v1.1-design.md  2026-05-14-moodlist-v1.2-design.md  2026-05-15-moodlist-v1.3-design.md
moodlist/: agent.py  cache.py  cli.py  config.py  indexer.py  llm.py  types.py  wishlist.py  writer.py
tests/: conftest.py  test_agent.py  test_cache.py  test_cli.py  test_config.py  test_e2e.py  test_indexer.py  test_llm.py  test_types.py  test_wishlist.py  test_writer.py
tests/fixtures/: silence.flac
