[project]
name = "moodlist"
version = "1.0.0"
description = "Mood-based playlist builder for foobar2000"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47",
    "anthropic>=0.40",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
moodlist = "moodlist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end test that hits the real Anthropic API (opt-in)",
]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
